WIP: Netvirt GBP integration changes at Neutron VPN
Change-Id: Ie007df331b994cac3acc6e2e833fbb699773f6f3
Signed-off-by: Srikanth Vavilapalli <srikanth.vavilapalli@ericsson.com>

--- a/vpnservice/commons/binding-parent/pom.xml
+++ b/vpnservice/commons/binding-parent/pom.xml
@@ -30,6 +30,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <model.bgp.version>2013.07.15.11-SNAPSHOT</model.bgp.version>
     <neutron.version>0.9.0-SNAPSHOT</neutron.version>
     <yangtools.version>1.2.0-SNAPSHOT</yangtools.version>
+    <gbpvpp.version>0.6.0-SNAPSHOT</gbpvpp.version>
   </properties>
 
   <build>
