--- a/vpnservice/commons/config-parent/pom.xml
+++ b/vpnservice/commons/config-parent/pom.xml
@@ -32,6 +32,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <neutron.version>0.9.0-SNAPSHOT</neutron.version>
     <openflowplugin.version>0.5.0-SNAPSHOT</openflowplugin.version>
     <ovsdb.version>1.5.0-SNAPSHOT</ovsdb.version>
+    <gbpvpp.version>0.6.0-SNAPSHOT</gbpvpp.version>
   </properties>
 
   <dependencies>
