WIP: Netvirt GBP integration changes at Neutron VPN
Change-Id: Ie007df331b994cac3acc6e2e833fbb699773f6f3
Signed-off-by: Srikanth Vavilapalli <srikanth.vavilapalli@ericsson.com>

--- a/vpnservice/features/vpnservice-features/pom.xml
+++ b/vpnservice/features/vpnservice-features/pom.xml
@@ -446,6 +446,13 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.groupbasedpolicy</groupId>
+      <artifactId>features-groupbasedpolicy</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
   </dependencies>
 
   <!-- Maven Site Configuration The following configuration is necessary
