<WIP> Add JUnits for InterVpnLinkLocator
 + Only 2 so far:
    -  testFindInterVpnLinksSameGroup
    -  testSelectSuitableDpns_moreDpnsThanIvpnLinks

 + It adds an L3vpnCatalog that contains several VPN test data
   to play with

 + Idem with InterVpnLinkTestCatalog

Change-Id: I1c6866ec5fe2570a469dd9ea9e5a6591d11dffa4
Signed-off-by: Miguel Perez <francisco.miguel.perez@ericsson.com>

--- a/vpnservice/vpnmanager/vpnmanager-impl/pom.xml
+++ b/vpnservice/vpnmanager/vpnmanager-impl/pom.xml
@@ -95,6 +95,15 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
             <artifactId>alivenessmonitor-api</artifactId>
             <version>${genius.version}</version>
         </dependency>
+
+        <!-- Testing dependencies -->
+        <dependency>
+          <groupId>org.opendaylight.controller</groupId>
+          <artifactId>sal-binding-broker-impl</artifactId>
+          <version>${mdsal.version}</version>
+          <scope>test</scope>
+          <type>test-jar</type>
+        </dependency>
     </dependencies>
 
     <build>
