BUG:8341   IAE seen in CSIT logs when port/vlan name is not matching UUID
Change-Id: If90482540cc5cc7c28d16397f84a39f3774eab7b
Signed-off-by: epgoraj <p.govinda.rajulu@ericsson.com>

--- a/vpnservice/elanmanager/elanmanager-impl/pom.xml
+++ b/vpnservice/elanmanager/elanmanager-impl/pom.xml
@@ -153,6 +153,12 @@
       <version>${genius.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.netvirt</groupId>
+      <artifactId>neutronvpn-impl</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
