--- a/vpnservice/natservice/natservice-impl/pom.xml
+++ b/vpnservice/natservice/natservice-impl/pom.xml
@@ -107,6 +107,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
       </dependency>
+<!-- only one dependency below added by Noel-->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>ipv6service-impl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
