Bug 8398 - communication between two tenant network failed while using default SG (stateful mode)
Initial patch to add vpnId to metadata in dispatcher tables. Removal of
vpnId will be handled in the next patchset.

Depends-On: b3e21d27e8f593b4ca326dd93239db38e1ead4cd
Change-Id: I1cbee44f951a75d4bbb382fed4e882162016c946
Signed-off-by: eupakir <kiran.n.upadhyaya@ericsson.com>

--- a/vpnservice/vpnmanager/vpnmanager-impl/pom.xml
+++ b/vpnservice/vpnmanager/vpnmanager-impl/pom.xml
@@ -95,6 +95,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
             <artifactId>alivenessmonitor-api</artifactId>
             <version>${genius.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.netvirt</groupId>
+            <artifactId>aclservice-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
