New (still empty) FibManagerComponentTest
This is a "skeleton" component test (see
https://wiki.opendaylight.org/view/BestPractices/Component_Tests) for
fibmanager.  Real functional tests should be filled in to this.

I would recommend that you merge this as-is already ASAP, instead of
waiting to fully completing it as part of this change, and then
separately raise new follow-up changes to (gradually) add real tests to
this skeleton.

Depends on https://git.opendaylight.org/gerrit/#/c/58085/ and on
removing the BundleContext in FibManagerImpl in (TBD).

Change-Id: I01779b5fe57dedf7eb246d583f0211bdd8b72682
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/vpnservice/fibmanager/fibmanager-impl/pom.xml
+++ b/vpnservice/fibmanager/fibmanager-impl/pom.xml
@@ -70,6 +70,48 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>infrautils-testutils</artifactId>
+      <version>${infrautils.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.infrautils</groupId>
+      <artifactId>inject.guice.testutils</artifactId>
+      <version>${infrautils.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal-binding-broker-impl</artifactId>
+      <scope>test</scope>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>mdsalutil-testutils</artifactId>
+      <version>${genius.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>elanmanager-impl</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>idmanager-impl</artifactId>
+      <version>${genius.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>interfacemanager-impl</artifactId>
+      <version>${genius.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
