elanmanager-impl <dependency> interfacemanager-impl <scope>test
It is wrong to directly depend on interfacemanager-impl from
elanmanager-impl.  This may only be done with <scope>test, for component
tests.

Remove the sole usage of a util from ITM - genius has the same util.

Change-Id: I0dda82184d547cefa5a447361111438ed3fe40c1
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/vpnservice/elanmanager/elanmanager-impl/pom.xml
+++ b/vpnservice/elanmanager/elanmanager-impl/pom.xml
@@ -69,11 +69,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.opendaylight.genius</groupId>
-      <artifactId>interfacemanager-impl</artifactId>
-      <version>${genius.version}</version>
-    </dependency>
-    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>dhcpservice-api</artifactId>
       <version>${project.version}</version>
@@ -132,6 +127,12 @@
     <dependency>
       <groupId>org.opendaylight.genius</groupId>
       <artifactId>idmanager-impl</artifactId>
+      <version>${genius.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>interfacemanager-impl</artifactId>
       <version>${genius.version}</version>
       <scope>test</scope>
     </dependency>
