--- a/vpnservice/elanmanager/elanmanager-impl/pom.xml
+++ b/vpnservice/elanmanager/elanmanager-impl/pom.xml
@@ -153,6 +153,12 @@
       <version>${genius.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.genius</groupId>
+      <artifactId>testutils</artifactId>
+      <version>${genius.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
