--- a/features/odl-netvirt-api/pom.xml
+++ b/features/odl-netvirt-api/pom.xml
@@ -115,6 +115,13 @@
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
+	<dependency>
+	     <groupId>org.opendaylight.openflowplugin</groupId>
+             <artifactId>odl-openflowplugin-eric-extensions</artifactId>
+             <version>0.9.0-SNAPSHOT</version>
+             <type>xml</type>
+             <classifier>features</classifier>
+        </dependency>
         <dependency>
             <groupId>org.opendaylight.ovsdb</groupId>
             <artifactId>odl-ovsdb-hwvtepsouthbound-api</artifactId>
