Pin more-itertools~=5.0.0
Pin more-itertools ~= 5.0.0, since version 6.0.0 requires Python 3.4
https://github.com/erikrose/more-itertools/releases

Error:
more-itertools requires Python '>=3.4' but the running Python is
2.7.5

Change-Id: Ib730b30e48e38d5220569132adabcf0e524f8f2a
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ commands =
     sphinx-build -W -n -b html -d {envtmpdir}/doctrees ./docs/ {envtmpdir}/html
 
 [testenv:pre-commit]
-deps = pre-commit
+deps =
+    more-itertools~=5.0.0
+    pre-commit
 commands =
     pre-commit install --hook-type commit-msg
     pre-commit run --all-files
