Use Python 3 for pre-commit env
Rather than fighting the inevitable of Python 2 EOL. Use Python 3
as the base Python system for the pre-commit check.

Change-Id: I2c2453fcf6dfc2e178549f2a1ff5b9c2d502f2e5
Signed-off-by: Thanh Ha <zxiiro@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     sphinx-build -W -n -b html -d {envtmpdir}/doctrees ./docs/ {envtmpdir}/html
 
 [testenv:pre-commit]
+basepython = python3
 deps = pre-commit
 commands =
     pre-commit install --hook-type commit-msg
