--- a/qosservice/impl/pom.xml
+++ b/qosservice/impl/pom.xml
@@ -63,6 +63,11 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
         </dependency>
         <dependency>
             <groupId>org.opendaylight.ovsdb</groupId>
+            <artifactId>southbound-api</artifactId>
+            <version>${ovsdb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.ovsdb</groupId>
             <artifactId>utils.southbound-utils</artifactId>
             <version>${ovsdb.version}</version>
         </dependency>
